# Optimize-Prime

./: README.md  facialRecognition.py
Bottom/: CMakeLists.txt
Bottom/src/: CMakeLists.txt  main.cpp
Bottom/src/ServoCluster/: ServoCluster.cpp
Bottom/src/communication/: communication.cpp  communication.h
Bottom/src/dcMotor/: DcMotor.cpp  DcMotor.h
Bottom/src/i2c/: i2c.cpp  i2c.h
Bottom/src/mic/: pdm_microphone.cpp
Bottom/src/model-parameters/: model_metadata.h  model_variables.h
Bottom/src/servo/: Servo.cpp  Servo.h
Bottom/src/tflite-model/: tflite_learn_10_compiled.cpp  tflite_learn_10_compiled.h
Iot/: CMakeLists.txt
Iot/src/: CMakeLists.txt  main.cpp
Iot/src/ServoCluster/: ServoCluster.cpp  ServoCluster.h
Iot/src/camera/: camera.cpp  camera.h
Iot/src/communication/: communication.cpp  communication.h
Iot/src/dcMotor/: DcMotor.cpp  DcMotor.h
Iot/src/i2c/: i2c.cpp  i2c.h
Iot/src/reset/: reset.cpp  reset.h
Iot/src/servo/: Servo.h
Iot/src/wifi/: htmldata.c
Iot/src/wifi/html_files/: index.shtml
